Changed og character buttons variable name to something more readable, fixed background to be fixed with page

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,8 +1,10 @@
 body{
   background-image: url('../Images/background.gif');
   background-size: cover;
-  margin:0;
-  padding: 0;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: auto;
 
 
 }
